Changes for 4.2.3rc1

New features:
...G...... [ZBXNEXT-287] added SSL support for agent HTTP checks (asestakovs)
...G...PS. [ZBXNEXT-5179] added option to specify absolute path in LoadModule; thanks to Glebs Ivanovskis for the patch (asestakovs)

Bug fixes:
..F....... [ZBX-10948] 'IT Services --> Service Time --> Note' infinite stretching (rlataria)
..F....... [ZBX-15585] fixed web scenarios pair manager issue when fields are duplicating on post type toggle (talbergs)
...G...... [ZBX-16142] fixed missing sys/ioctl.h from src/libs/zbxsysinfo/openbsd/net.c; thanks to Andrea Biscuola for the patch (akozlovs)
.......PS. [ZBX-16166] fixed Zabbix fping feature detection does not work with fping builds since 10 Feb 2017 (akozlovs)
....I..... [ZBX-16178] fixed distributive can contain untracked backup file include/config.h.in~ (akozlovs)
........S. [ZBX-16170] fixed crash in global event correlation (vso)
...G...... [ZBX-16096] fixed "system.cpu.util" reporting incorrect CPU utilisation due to guest time sometimes not being fully included in user time by "/proc/stat" (vso)
..F....... [ZBX-15882] fixed widgets flickering on refresh (ashubin)
..F....... [ZBX-15974] improved trigger expression list in trigger modal form (gcalenko)
...G...... [ZBX-14441] fixed windows agent "eventlog" key for reading big event log files of windows 2003 (MVekslers)
..F....... [ZBX-16109] fixed hidden error in graphs for PHP 7.3.5 (rlataria)
....I...S. [ZBX-16093] fixed regular expression File systems for discovery does not contain apfs (akozlovs)
..F....... [ZBX-16080] fixed setup page to not to use bclib (talbergs)
..F....... [ZBX-15797] fixed dashboard map widget sub-map link behaviour (miks, talbergs)
A.F....... [ZBX-15049] fixed to host group limited global scripts to be usable in sub group (talbergs)