@@ -181,6 +181,14 @@ pre {
   font-family: "Courier New", Courier, monospace;
   font-size: 1em; }
 
+.disabled {
+  opacity: 0.35;
+  filter: alpha(opacity=35);
+  cursor: default !important; }
+  .disabled .disabled,
+  .disabled [disabled] {
+    opacity: 1 !important; }
+
 pre, pre a, pre td, pre span {
   white-space: pre-wrap;
   word-wrap: break-word; }
@@ -1027,6 +1035,17 @@ output {
   .subfilter-enabled sup {
     color: #8f8f8f; }
 
+.disabled {
+  background-color: transparent; }
+  .disabled .subfilter-enabled {
+    color: black; }
+  .disabled .subfilter-disable-btn {
+    cursor: default;
+    color: #0f0f0f;
+    background-color: #4f4f4f; }
+    .disabled .subfilter-disable-btn:hover, .disabled .subfilter-disable-btn:focus, .disabled .subfilter-disable-btn:active {
+      color: #0f0f0f; }
+
 .filter-forms {
   margin: 0 auto;
   text-align: center;
@@ -1087,16 +1106,14 @@ output {
       .multiselect .multiselect-list li .subfilter-enabled {
         padding: 0 9px 0 4px;
         line-height: 18px; }
-      .multiselect .multiselect-list li.selected .subfilter-enabled {
-        background-color: dimgray; }
-      .multiselect .multiselect-list li.selected .subfilter-disable-btn {
-        background-color: dimgray;
-        opacity: 1;
-        filter: alpha(opacity=100); }
-        .multiselect .multiselect-list li.selected .subfilter-disable-btn:active {
-          background-color: dimgray;
-          opacity: 1;
-          filter: alpha(opacity=100); }
+  .multiselect .disabled {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    background-color: #2b2b2b; }
+    .multiselect .disabled .subfilter-enabled,
+    .multiselect .disabled .subfilter-disable-btn {
+      background-color: #383838;
+      color: #808080; }
   .multiselect div[aria-live] {
     overflow: hidden;
     position: absolute;
@@ -1974,24 +1991,6 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
   color: #525252;
   background-color: #2b2b2b !important;
   border-color: #3d3d3d; }
-
-.disabled {
-  cursor: default !important;
-  background-color: transparent !important;
-  opacity: 0.35;
-  filter: alpha(opacity=35); }
-  .disabled .subfilter-enabled {
-    color: black; }
-  .disabled .subfilter-disable-btn {
-    cursor: default;
-    color: #0f0f0f;
-    background-color: #4f4f4f; }
-    .disabled .subfilter-disable-btn:hover {
-      color: black; }
-    .disabled .subfilter-disable-btn:focus {
-      color: black; }
-    .disabled .subfilter-disable-btn:active {
-      color: black; }
 
 .inaccessible .subfilter-enabled {
   color: #b2b2b2; }
