@@ -27,6 +27,10 @@ $alt-blue-grey: #97aab3;
 $white: #fff !default;
 $transparent: transparent;
 
+$disabled-bg-color: #ebebeb !default;
+$disabled-item-color: #768d99 !default;
+$disabled-item-bg-color: #ccd5d9 !default;
+
 $teal: #0f998b;
 
 // MAIN
@@ -129,3 +133,8 @@ $problem-unack-fg-color: #cc0000 !default;
 $problem-ack-fg-color: #cc0000 !default;
 $ok-unack-fg-color: #009900 !default;
 $ok-ack-fg-color: #009900 !default;
+
+// MULTISELECT
+$multiselect-disabled-bg-color: $disabled-bg-color;
+$multiselect-item-disabled-color: $disabled-item-color;
+$multiselect-item-disabled-bg-color: $disabled-item-bg-color;
