@@ -16,6 +16,10 @@ $lighter-green: #32453a;
 
 $blue: #429ae3;
 
+$disabled-bg-color: #2b2b2b;
+$disabled-item-color: #808080;
+$disabled-item-bg-color: #383838;
+
 // MAIN
 $main-nav-bg-color: #2b2b2b;
 $main-subnav-bg-color: #454545;
